polish up welcome page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
 	<small>
-		<a href="http://railstutorial.org/">Rails Tutorial</a>
-		by Michael Hartl
+		Connect to <a href="https://github.com/Caslyn/Twitter-Clone">Github Repo</a>
 	</small>
 	<nav>
 		<ul>
