--- a/app/views/static_pages/_welcome.html.erb
+++ b/app/views/static_pages/_welcome.html.erb
@@ -5,6 +5,7 @@
 	</h2>
 
 	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign in As Guest", sessions_path(guest: "example@railstutorial.org"), class: "btn btn-large btn-primary", method: "POST" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
