adding new relic

--- a/app/views/static_pages/_welcome.html.erb
+++ b/app/views/static_pages/_welcome.html.erb
@@ -1,11 +1,6 @@
 <div class="center hero-unit">
-	<h1>Welcome to this Twitter App</h1>
-	<h2>
-		Created by Caslyn Cole.
-	</h2>
+	<h1>Welcome to Twitter-Ific!</h1>
 
 	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 	<%= link_to "Sign in As Guest", sessions_path(guest: "example@railstutorial.org"), class: "btn btn-large btn-primary", method: "POST" %>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
