--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,4 +1,5 @@
 <li>
+	<%= link_to gravatar_for(micropost.user), micropost.user %>
 	<span class="content"><%= wrap(micropost.content) %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(micropost.created_at) %> ago.
