--- a/app/views/static_pages/_welcome.html.erb
+++ b/app/views/static_pages/_welcome.html.erb
@@ -1,6 +1,7 @@
 <div class="center hero-unit">
-	<h1>Welcome to Twitter-Ific!</h1>
+	<h1>This. Is. Twitter-ific.</h1>
+	<h2>What Are You Thinking?</h2>
 
 	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-	<%= link_to "Sign in As Guest", sessions_path(guest: "example@railstutorial.org"), class: "btn btn-large btn-primary", method: "POST" %>
+	<%= link_to "Sign in As Guest", sessions_path(guest: "guest@twitter-ific.org"), class: "btn btn-large btn-primary", method: "POST" %>
 </div>
