--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,9 @@
 			</h1>
 		</section>
 		<section>
+			<%= gravatar_for @user %>
+		</section>
+		<section>
 			<%= render 'shared/stats' %>
 		</section>
 	</aside>
