--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title><%= full_title(yield(:title)) %></title>
+	  <title>Twitter-ific</title>
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <%= csrf_meta_tags %>
 	  <% render 'layouts/shim' %>
 	</head>
-	<body>
+	<body <%= "class=signed-in" if signed_in? %>>
 		<%= render 'layouts/header' %>
 		<div class="container">
 			<% flash.each do |key, value| %>
