--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -2,8 +2,10 @@
 <div class="row">
 	<aside class="span4">
 		<section>
-			<%= gravatar_for @user %>
 			<h1><%= @user.name %></h1>
+			<section>
+				<%= gravatar_for @user %>
+			</section>
 			<span><%= link_to "view my profile", @user %></span>
 			<span><b>Microposts:</b> <%= @user.microposts.count %></span>
 		</section>
